feat: add delete and update method in the api
